Added get fund controller and routes and tested
